--- a/res/xml/preference_headers.xml
+++ b/res/xml/preference_headers.xml
@@ -38,6 +38,12 @@
         android:summary="@string/header_summary_power_menu" />
 
     <header
+       android:id="@+id/halo_settings"
+       android:fragment="com.aokp.romcontrol.fragments.PowerMenu"
+       android:icon="@drawable/ic_settings_halo"
+       android:title="@string/halo_settings_title" />
+
+    <header
         android:id="@+id/keyboard"
         android:fragment="com.aokp.romcontrol.fragments.Keyboard"
         android:icon="@drawable/ic_rom_control_keyboard"
